image overlapping with buy now button in mobile view fixed

--- a/css/style2.css
+++ b/css/style2.css
@@ -282,7 +282,7 @@ ul li a{
             height: 200px;
             width:200px;
             left: 50%;
-            margin-top: 20%;
+            margin-top: 30%;
             transform: translate(-50%);
             
         }
